--- a/wallet/README
+++ b/wallet/README
@@ -1,30 +1,32 @@
-FILES
+Technical details
+=================
+
+### FILES
 
 Your wallet contains your private keys and various transaction related metadata. It is stored in app-private
 storage:
 
-	Mainnet: /data/data/de.schildbach.wallet/files/wallet-protobuf (MODE_PRIVATE)
-
-	Testnet: /data/data/de.schildbach.wallet_test/files/wallet-protobuf-testnet (MODE_WORLD_READABLE | MODE_WORLD_WRITEABLE)
+    Mainnet: /data/data/de.schildbach.wallet/files/wallet-protobuf
+    Testnet: /data/data/de.schildbach.wallet_test/files/wallet-protobuf-testnet
 
 The wallet file format is not compatible to wallet.dat (Satoshi client). Rather, it uses a custom protobuf format
 which should be compatible between clients using bitcoinj.
 
 Certain actions cause automatic rolling backups of your wallet to app-private storage:
 
-	Mainnet: /data/data/de.schildbach.wallet/files/key-backup-protobuf (MODE_PRIVATE)
-
-	Testnet: /data/data/de.schildbach.wallet_test/files/key-backup-protobuf-testnet (MODE_PRIVATE)
+    Mainnet: /data/data/de.schildbach.wallet/files/key-backup-protobuf
+    Testnet: /data/data/de.schildbach.wallet_test/files/key-backup-protobuf-testnet
 
 Your wallet can be manually backed up to and restored from external storage:
 
-	Mainnet: /sdcard/Download/bitcoin-wallet-backup-<yyyy-MM-dd>
-
-	Testnet: /sdcard/Download/bitcoin-wallet-backup-testnet-<yyyy-MM-dd>
+    Mainnet: /sdcard/Download/bitcoin-wallet-backup-<yyyy-MM-dd>
+    Testnet: /sdcard/Download/bitcoin-wallet-backup-testnet-<yyyy-MM-dd>
 
 If you want to recover coins from manual backups and for whatever reason you cannot use the app
-itself to restore from the backup, see the separate README.recover guide.
+itself to restore from the backup, see the separate [README.recover.md](README.recover.md) guide.
 
+The current fee rate for each of the fee categories (economic, normal, priority) is cached in
+app-private storage:
 
 DEBUGGING
 
@@ -40,7 +42,7 @@ The app can send extensive debug information. Use Options > Settings > Report Is
 In the generated e-mail, replace the support address with yours.
 
 
-BUILDING THE DEVELOPMENT VERSION
+### BUILDING THE DEVELOPMENT VERSION
 
 It's important to know that the development version uses Testnet, is debuggable and the wallet file
 is world readable/writeable. The goal is to be able to debug easily.
@@ -50,36 +52,32 @@ You can probably skip some steps, especially if you built Android apps before.
 You'll need git, a Java SDK 6 (or later) and Gradle 2.10 (or later) for this. I'll assume Ubuntu Xenial Linux
 for the package installs, which comes with slightly more recent versions.
 
-	# first time only
-	sudo apt install git gradle openjdk-8-jdk libstdc++6:i386 zlib1g:i386
+    # first time only
+    sudo apt install git gradle openjdk-8-jdk libstdc++6:i386 zlib1g:i386
 
-Get the Android SDK (Tools only) from
+Download the [Android SDK Tools](https://developer.android.com/studio/index.html#command-tools)
+and unpack to your workspace directory. Point your `ANDROID_HOME` variable to the unpacked Android SDK directory
+and switch to it.
 
-	http://developer.android.com/sdk/
+Download and install the required Android dependencies:
 
 and unpack it to your workspace directory. Point your ANDROID_HOME variable to that Android SDK directory
 and switch to it. Use
 
-	# make sure tools are at the newest version
-	tools/android update sdk --no-ui --force --filter tools
-
-	# fetch required android dependencies
-	tools/android update sdk --no-ui --force --filter build-tools-23.0.3,android-15,android-16,extra-android-m2repository
-
-to download the necessary API level.
+Download the [Android NDK](https://developer.android.com/ndk/downloads/), then unpack it to your workspace directory. Point your `ANDROID_NDK_HOME` variable to the unpacked Android NDK directory.
 
 Finally, you can build Bitcoin Wallet and sign it with your development key. Again in your workspace,
-use
+use:
 
-	# first time only
-	git clone -b master https://github.com/bitcoin-wallet/bitcoin-wallet.git bitcoin-wallet
+    # first time only
+    git clone -b master https://github.com/bitcoin-wallet/bitcoin-wallet.git bitcoin-wallet
 
-	# each time
-	cd bitcoin-wallet
-	git pull
-	gradle clean test build
+    # each time
+    cd bitcoin-wallet
+    git pull
+    gradle clean :native-scrypt:copy test build
 
-To install the app on your Android device, use
+To install the app on your Android device, use:
 
 	# first time only
 	sudo apt install android-tools-adb
@@ -91,7 +89,7 @@ If installing fails, make sure "Developer options" and "USB debugging" are enabl
 connection is established.
 
 
-BUILDING THE PRODUCTIVE VERSION
+### BUILDING THE PRODUCTIVE VERSION
 
 At this point I'd like to remind that you continue on your own risk. According to the license,
 there is basically no warranty and liability. It's your responsibility to audit the source code
@@ -101,19 +99,19 @@ The productive version uses Mainnet, is built non-debuggable, space-optimized wi
 wallet file is protected against access from non-root users. In the code repository, it lives in a
 separate 'prod' branch that gets rebased against master with each released version.
 
-	# each time
-	cd bitcoin-wallet
-	git fetch origin
-	git checkout origin/prod
-	gradle clean test build
+    # each time
+    cd bitcoin-wallet
+    git fetch origin
+    git checkout origin/prod
+    gradle clean :native-scrypt:copy test build
 
 
-SETTING UP FOR DEVELOPMENT
+### SETTING UP FOR DEVELOPMENT
 
 You should be able to import the project into Android Studio, as it uses Gradle for building.
 
 
-TRANSLATIONS
+### TRANSLATIONS
 
 The source language is English. Translations for all languages except German happen on Transifex:
 
@@ -142,7 +140,7 @@ Note that after pulling, any bugs introduced by either translators or Transifex 
 corrected manually.
 
 
-NFC (Near field communication)
+### NFC (Near field communication)
 
 Bitcoin Wallet supports reading Bitcoin requests via NFC, either from a passive NFC tag or from
 another NFC capable Android device that is requesting coins.
@@ -152,15 +150,14 @@ the "Request coins" dialog open). The "Send coins" dialog will open with fields 
 
 Instructions for preparing an NFC tag with your address:
 
-- We have successfully tested this NFC tag writer:
-  https://play.google.com/store/apps/details?id=com.nxp.nfc.tagwriter
+- We have successfully tested [this NFC tag writer](https://play.google.com/store/apps/details?id=com.nxp.nfc.tagwriter).
   Other writers should work as well, let us know if you succeed.
 
 - Some tags have less than 50 bytes capacity, those won't work. 1 KB tags recommended.
 
 - The tag needs to contain a Bitcoin URI. You can construct one with the "Request coins" dialog,
-  then share with messaging or email. You can also construct the URI manually. Example for Mainnet:
-  bitcoin:1G2Y2jP5YFZ5RGk2PXaeWwbeA5y1ZtFhoL
+  then share with messaging or email. You can also construct the URI manually. Mainnet example:
+  `bitcoin:1G2Y2jP5YFZ5RGk2PXaeWwbeA5y1ZtFhoL`
 
 - The type of the message needs to be URI or URL (not Text).
 
@@ -168,27 +165,26 @@ Instructions for preparing an NFC tag with your address:
   could overwrite the tag with his own Bitcoin address.
 
 
-BITCOINJ
+### BITCOINJ
 
-Bitcoin Wallet uses bitcoinj for Bitcoin specific logic:
+Bitcoin Wallet uses [bitcoinj](https://bitcoinj.github.io/) for Bitcoin specific logic.
 
 	https://bitcoinj.github.io/
 
-
-EXCHANGE RATES
+### EXCHANGE RATES
 
 Bitcoin Wallet reads this feed from "BitcoinAverage" for getting exchange rates:
 
 	https://api.bitcoinaverage.com/custom/abw
 
-I chose this feed because it is not dependent on a single exchange. However, you should keep in
-mind it's always a 24h average (falling back to 7d or even 30d if no trade occurred for a long
-time).
+We chose this feed because it is not dependent on a single exchange. However, you should keep in
+mind it's always a 24h average. This feature can be disabled with the compile-time flag
 
-If the above feed is not available, the feed from "Blockchain.info" is fetched instead:
+    Constants.ENABLE_EXCHANGE_RATES
 
 	https://blockchain.info/ticker
 
+### SWEEPING WALLETS
 
 SWEEPING WALLETS
 
